--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
         "react-bootstrap": "^2.10.5",
         "react-datepicker": "^7.5.0",
         "react-dom": "^18.2.0",
+        "react-helmet-async": "^2.0.5",
         "react-hook-form": "^7.51.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^6.22.3",
